fixed footer spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,10 @@ form {
   text-align: center;
 }
 
+.bottom-spacer {
+  height:  50px;
+}
+
 .footer {
   z-index: 2;
   margin-top: 1rem;
